--- a/latex-templates/matematik/matematik.tex
+++ b/latex-templates/matematik/matematik.tex
@@ -225,7 +225,7 @@
 \newcommand{\Div}{\operatorname{div}}
 \newcommand{\Rot}{\operatorname{rot}}
 \newcommand{\Grad}{\operatorname{grad}}
-\newcommand{\Tr}{\operatorname{Trace}}
+\newcommand{\tr}{\operatorname{Trace}}
 \newcommand{\del}[2]{\frac{\partial #1}{\partial #2}}
 \DeclarePairedDelimiterX\innerp[2]{\langle}{\rangle}{#1,#2}
 \DeclarePairedDelimiterX\qinnerp[2]{\langle}{\rangle}{#1\vert#2}
@@ -267,6 +267,7 @@
 \newcommand{\pa}[2]{\mathrm{pa}_{#1}({#2})}
 \newcommand{\lik}[2]{\mathcal{L}(#1 \mid #2)}
 \newcommand{\hh}{\mathcal{H}}
+\newcommand{\prob}[1]{\mathbb{P}{\bigl(#1\bigr)}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
